--- a/package.json
+++ b/package.json
@@ -47,5 +47,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "vite": "^7.0.0"
+  },
+  "overrides": {
+    "use-scan-detection": {
+      "react": "^19.1.0"
+    }
   }
 }
