--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -26,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "react-to-pdf": "^2.0.1",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
