--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
-    "jspdf": "^3.0.1",
+    "jsbarcode": "^3.12.1",
+    "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.523.0",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.6.3",
     "react-to-pdf": "^2.0.1",
     "recharts": "^3.0.2",
