--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
@@ -30,6 +33,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
     "react-is": "^19.1.0",
     "react-qr-code": "^2.0.18",
