updating the latest code

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "jsbarcode": "^3.12.1",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.523.0",
+    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
